--- a/index.css
+++ b/index.css
@@ -310,8 +310,9 @@ button:focus {
 }
 
 #answers, #rightAns{
-    min-width: 100vw;
+    width: inherit;
     text-align: center;
+    height: 9vh;
 }
 
 .ansTextP{
